--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
 
-        {% block javascripts %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+<html>
+
+<head>
+
+<meta charset="UTF-8">
+
+<title>{% block title %}Welcome!{% endblock %}</title>
+
+    {% block stylesheets %}
+
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+
+rel="stylesheet"
+
+              integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+
+crossorigin="anonymous">
+
+    {% endblock %}
+
+</head>
+
+<body>
+
+{% block body %}{% endblock %}
+
+{% block javascripts %}{% endblock %}
+
+</body>
+
 </html>
